# opensafely-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  LICENSE  MANIFEST.in  README.md  justfile  opensafely.py  pyproject.toml  repository_permisisons.yaml  repository_permissions.yaml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  setup.py  vendor.in  vendor.txt
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yaml  tests.yaml  tests.yml
opensafely/: __init__.py  check.py  clean.py  codelists.py  execute.py  extract_stats.py  info.py  jupyter.py  launch.py  log_stats.py  pull.py  rstudio.py  unzip.py  update_codelists.py  upgrade.py  utils.py  windows.py
opensafely/_vendor/: Deprecated-1.2.13.dist-info.pyi  Deprecated-1.2.18.dist-info.pyi  backoff-2.1.2.dist-info.pyi  certifi-2020.11.8.dist-info.pyi  certifi-2025.1.31.dist-info.pyi  chardet-3.0.4.dist-info.pyi  charset_normalizer-3.4.1.dist-info.pyi  charset_normalizer.pyi  deprecated.pyi  distro-1.8.0.dist-info.pyi  distro-1.9.0.dist-info.pyi  googleapis_common_protos-1.56.4.dist-info.pyi  googleapis_common_protos-1.69.2.dist-info.pyi  idna-2.10.dist-info.pyi  idna-3.10.dist-info.pyi  importlib_metadata-8.5.0.dist-info.pyi  jobrunner.pyi  opensafely_jobrunner-2.59.11.dist-info.pyi  opensafely_jobrunner-2.62.11.dist-info.pyi  opensafely_jobrunner-2.62.4.dist-info.pyi  opensafely_jobrunner-2.65.1.dist-info.pyi  opensafely_jobrunner-2.65.2.dist-info.pyi  opensafely_jobrunner-2.65.3.dist-info.pyi  opensafely_jobrunner-2.65.4.dist-info.pyi  opensafely_jobrunner-2.67.1.dist-info.pyi  opensafely_jobrunner-2.68.2.dist-info.pyi  opensafely_jobrunner-2.69.0.dist-info.pyi  opensafely_jobrunner-2.71.0.dist-info.pyi  opensafely_jobrunner-2.72.0.dist-info.pyi  opensafely_jobrunner-2.73.0.dist-info.pyi  opensafely_jobrunner-2.74.0.dist-info.pyi  opensafely_jobrunner-2.74.1.dist-info.pyi  opensafely_jobrunner-2.75.0.dist-info.pyi  opensafely_jobrunner-2.75.1.dist-info.pyi  opensafely_jobrunner-2.75.2.dist-info.pyi  opensafely_jobrunner-2.75.3.dist-info.pyi  opensafely_jobrunner-2.75.4.dist-info.pyi  opensafely_pipeline-0.2.1.dist-info.pyi  opensafely_pipeline-0.2.5.dist-info.pyi  opensafely_pipeline-0.3.0.dist-info.pyi  (+38 more)
opensafely/_vendor/Deprecated-1.2.13.dist-info/: RECORD
opensafely/_vendor/Deprecated-1.2.18.dist-info/: RECORD
opensafely/_vendor/backoff/: __init__.py  _async.py  _decorator.py  _sync.py  _typing.py
opensafely/_vendor/backoff-2.1.2.dist-info/: RECORD
opensafely/_vendor/certifi/: __main__.py  core.py
opensafely/_vendor/certifi-2020.11.8.dist-info/: RECORD
opensafely/_vendor/certifi-2025.1.31.dist-info/: RECORD
opensafely/_vendor/chardet/: langbulgarianmodel.py  langgreekmodel.py  langhebrewmodel.py  langhungarianmodel.py  langrussianmodel.py  langthaimodel.py  langturkishmodel.py
opensafely/_vendor/chardet-3.0.4.dist-info/: RECORD
opensafely/_vendor/charset_normalizer/: __init__.py  api.py  cd.py  legacy.py  md.py  models.py  utils.py
opensafely/_vendor/charset_normalizer-3.4.1.dist-info/: RECORD
opensafely/_vendor/deprecated/: __init__.py  classic.py  sphinx.py
opensafely/_vendor/distro-1.8.0.dist-info/: RECORD
opensafely/_vendor/distro-1.9.0.dist-info/: RECORD
opensafely/_vendor/googleapis_common_protos-1.56.4.dist-info/: RECORD
opensafely/_vendor/googleapis_common_protos-1.69.2.dist-info/: RECORD
opensafely/_vendor/idna-2.10.dist-info/: RECORD
opensafely/_vendor/idna-3.10.dist-info/: RECORD
opensafely/_vendor/importlib_metadata/: __init__.py
opensafely/_vendor/importlib_metadata-8.5.0.dist-info/: RECORD
opensafely/_vendor/jobrunner/: actions.py  config.py  create_or_update_jobs.py  job_executor.py  (+11 more)
opensafely/jobrunner/: actions.py  config.py  create_or_update_jobs.py  models.py  queries.py  record_stats.py  reusable_actions.py  run.py  service.py  sync.py  tracing.py
scripts/: update-all-dependencies.sh  update-dependencies.sh  update-jobrunner.sh  update.sh
tests/: conftest.py  test_check.py  test_clean.py  test_codelists.py  test_execute.py  test_extract_stats.py  test_info.py  test_init.py  test_jupyter.py  test_launch.py  test_log_stats.py  test_packaging.py  test_pull.py  test_rstudio.py  test_unzip.py  test_update_codelists.py  test_upgrade.py  test_utils.py  test_windows.py
tests/jobrunner/: conftest.py  factories.py  fakes.py  test_actions.py  test_config.py  test_create_or_update_jobs.py  test_integration.py  test_job_resource_weights.py  test_local_executor.py  test_logging_executor.py  test_models.py  test_queries.py  test_record_stats.py  test_reusable_actions.py  test_run.py  test_service.py  test_sync.py  test_tracing.py  test_workspace_state.py
(+528 files in other folders)
