[build-system]
requires = ["setuptools>=75.3.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensafely"
dynamic = ["version"]
description = "Command line tool for running OpenSAFELY studies locally."
readme = "README.md"
keywords = ["opensafely", "epidemiology", "research"]
authors = [
    {name = "OpenSAFELY", email = "tech@opensafely.org"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://opensafely.org"
Documentation = "https://docs.opensafely.org"
Repository = "https://github.com/opensafely-core/opensafely-cli"
"Bug Reports" = "https://github.com/opensafely-core/opensafely-cli/issues"
"Source" = "https://github.com/opensafely-core/opensafely-cli"

[project.optional-dependencies]
tracing = [
    "opentelemetry-api==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-exporter-otlp-proto-http==1.15.0"
]

[project.scripts]
opensafely = "opensafely:main"

# this is requires to avoid triggering a bug in the vendored opentelemetry-api
[project.entry-points.opentelemetry_context]
contextvars_context = "opensafely._vendor.opentelemetry.context.contextvars_context:ContextVarsRuntimeContext"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["opensafely*"]

[tool.setuptools.package-data]
"opensafely._vendor.certifi" = ["*.pem"]

[tool.setuptools.dynamic]
version = {file = "opensafely/VERSION"}

[tool.black]
extend-exclude = 'opensafely/_vendor/*'

[tool.vendoring]
destination = "opensafely/_vendor/"
requirements = "requirements.prod.txt"
namespace = "opensafely._vendor"

# We don't use any patches, but this directory has to be defined (though it
# doesn't have to exist)
patches-dir = "patches"
# Other config values which have to be defined even though we don't use them
protected-files = []
typing-stubs = {}

# some packages don't ship their license in the package. ffs google.
[tool.vendoring.license.fallback-urls]
protobuf = "https://raw.githubusercontent.com/protocolbuffers/protobuf/main/LICENSE"
chardet = "https://raw.githubusercontent.com/chardet/chardet/main/LICENSE"

[tool.vendoring.transformations]
# Imports of the form `import X.Y` can't be rewritten automatically by the
# vendoring tool so we apply some basic replacements here
substitute = [
  # certifi refers to itself by string here so we need to fix that too
  { match='get_path\("certifi"', replace='get_path("opensafely._vendor.certifi"' },
  { match='files\("certifi"\)', replace='files("opensafely._vendor.certifi")' },
  # The below import just pulls in some nasty backwards compatibility code that
  # we don't need. See:
  # https://github.com/psf/requests/blob/589c4547338b592b1fb77c65663d8aa6fbb7e38b/requests/packages.py
  { match='from \. import packages, utils', replace='from . import utils' },
  { match='wrapt._wrappers', replace='opensafely._vendor.wrapt._wrappers'},
  { match='urllib3.contrib.securetransport', replace='opensafely._vendor.urllib3.contrib.securetransport'},
  { match='urllib3.contrib.pyopenssl', replace='opensafely._vendor.urllib3.contrib.pyopenssl'},
]

drop = [
  # a couple of libraries create these and I don't think we need them
  "*-nspkg.pth",
  # Scripts we don't need
  "bin/",
]

[tool.vendoring.license.directories]
job-runner = "jobrunner"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".venv/*",
  "opensafely/_vendor/*",
]

[tool.coverage.report]
fail_under = 89
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "coverage",
  "doc",
  "docker",
  "htmlcov",
  "venv",
  "opensafely/_vendor",
  "build",
]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]
target-version = "py38"

[tool.ruff.isort]
lines-after-imports = 2
known-third-party = ["opensafely._vendor"]
